# emuNEX-server

./: .gitignore  Cargo.toml  Config.default.toml  LICENSE  README.md  Rocket.toml  compile_errors.txt
.github/: FUNDING.yml
.sqlx/: query-031d2ebca872afdc0cd642d13ac97e1af6267da2a4502c150bf2715c99738b37.json  query-04725930b7fdb0119a8627ba1b8a4de78c5d4694a3e35d8a6dfb80915fd98fdd.json  query-05fc0af52c0b973f6395ec9855f5f06a6e445568bba7557a6a4848a5c26df7c2.json  query-061025083007c0169f22528325a0fd3f5af119fbe225493dd92cdb89eeb046d3.json  query-06cc74be502120fdba4a6bf669ad9c0bffca00f2645d68c17c777591134082ad.json  query-07561bcfa0150240b03ebb04160bd3d53ad887628033f6ebd32950d0cb2b4869.json  query-080d87c933fea55c05f335cbda0e2174fe27ce128461aa3557897e819a2e347d.json  query-082d863874bcedca395c30021ae4627bafcb71e0526e28b7174d821a8b5ebe33.json  query-0959a5b503a1d6e0cf20243c966f406016c88b533c53964aaa04bd3bb94638c4.json  query-096e24cab9a1431671c0b763531fe096f9990e4893f5241df87e4752f3e36bde.json  query-0994f20a2589cf4d5bf9e2fb48dee22b8e90718016bd852c706f056385b0edf5.json  query-0a10df302bec898d3a627d20f58f38ba7e2956476c5deeb873ebf86b24bde447.json  query-0c3f1fd405d4e3432b7b1d5be677481bf08fb86deab75e4f3bc2a07d98514600.json  query-0cad74fe15df42b11d304a3596a2a3ae48137514f3b190cfae59236a97b5cb75.json  query-0f9f04c633748e8f9e9e31c6afea51cf50a0a9c9e81902bc1c7341055edc1cbf.json  query-0fd9b1ba225e82c9a5544498329d4a2656c35e71c8e617a8e75bfe65dfd351e4.json  query-123c4dffb91088aea30faf09c81753b321e938b85bfd0c9b7604c688cb831109.json  query-124a2d63acde9585d031e0b2ca6864fa72f62c0737cccdaa9818a36ad19797d9.json  query-1262b348b84f13d98bd6622560864babe3264667e387f64a339aa8eb0b58e38e.json  query-132eee925bee7131909d6c8de1e49cc3c316455f64174247623d7937efcf92a8.json  (+209 more)
migrations/: 202603121730_create-users.sql  (+39 more)
src/: main.rs
(+92 files in other folders)
