[package]
name = "emunex-server"
description = "Emulation made easy."
authors = ["chloecinders"]
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "macros", "postgres", "chrono", "migrate", "json"] }
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
uuid = { version = "1.22.0", features = ["v4"] }
zip = "8.2.0"

